fix scrolling issue on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1757,20 +1757,24 @@ video {
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
   overflow-x: hidden;
+  height: 100%;
 }
 
 html:has(#overlayForm:not(.hidden)),
 body:has(#overlayForm:not(.hidden)) {
   overflow: hidden;
+  height: 100%;
 }
 
 @media screen and (max-width: 450px) {
   html:has(#responsiveMenu.right-0) {
     overflow: hidden;
+    height: 100%;
   }
 }
 
