--- a/src/styles.css
+++ b/src/styles.css
@@ -13,16 +13,19 @@ img {
 
 body {
   overflow-x: hidden;
+  height: 100%;
 }
 
 html:has(#overlayForm:not(.hidden)),
 body:has(#overlayForm:not(.hidden)) {
   overflow: hidden;
+  height: 100%;
 }
 
 @media screen and (max-width: 450px) {
   html:has(#responsiveMenu.right-0) {
     overflow: hidden;
+    height: 100%;
   }
 }
 
